force-app/main/default/objects/Opportunity/fields/Firm_Approval__c.field-meta.xml
<CustomField>
    <fullName>Firm_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Approval</label>
    <referenceTo>Firm_Approval__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>