force-app/main/default/objects/Opportunity/fields/Firm_Approval_Created__c.field-meta.xml
<CustomField>
    <fullName>Firm_Approval_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Approval Created</label>
    <type>Checkbox</type>
</CustomField>