force-app/main/default/objects/Opportunity/fields/Firm_Review__c.field-meta.xml
<CustomField>
    <fullName>Firm_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Review</label>
    <referenceTo>Firm_Review__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>