force-app/main/default/objects/Opportunity/fields/Five_Star_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Five_Star_Dollar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Five Star Rich People</description>
    <label>Five Star Historical High Value (Forbes)</label>
    <type>Checkbox</type>
</CustomField>