force-app/main/default/objects/Opportunity/fields/FiveStarPurchaserForbes__c.field-meta.xml
<CustomField>
    <fullName>FiveStarPurchaserForbes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Five Star Purchaser (Forbes)</label>
    <type>Checkbox</type>
</CustomField>