force-app/main/default/objects/Opportunity/fields/FiveStarWinnerForbes__c.field-meta.xml
<CustomField>
    <fullName>FiveStarWinnerForbes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Five Star Winner (Forbes)</label>
    <type>Checkbox</type>
</CustomField>