force-app/main/default/objects/Opportunity/fields/Flex_Cert_Time_Requested__c.field-meta.xml
<CustomField>
    <fullName>Flex_Cert_Time_Requested__c</fullName>
    <label>Flex Cert Time Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>