force-app/main/default/objects/Opportunity/fields/Forbes_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forbes Purchaser</label>
    <type>Checkbox</type>
</CustomField>