force-app/main/default/objects/Opportunity/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <formula>Estimated_Purchase__c *  

 IF(ISPICKVAL(Percent_Chance__c, &quot;10%&quot;), 0.10,
     IF(ISPICKVAL(Percent_Chance__c, &quot;25%&quot;), 0.25,
          IF(ISPICKVAL(Percent_Chance__c, &quot;50%&quot;), 0.50,
               IF(ISPICKVAL(Percent_Chance__c, &quot;75%&quot;), 0.75,
                    IF(ISPICKVAL(Percent_Chance__c, &quot;90%&quot;), 0.9,
null)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>