force-app/main/default/objects/Opportunity/fields/Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Form_Completed__c</fullName>
    <label>Form Completed</label>
    <type>DateTime</type>
</CustomField>