force-app/main/default/objects/Opportunity/fields/Form_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Form_Completed_By__c</fullName>
    <label>Form Completed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Research Caller</fullName>
            </value>
            <value>
                <fullName>Research Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>