force-app/main/default/objects/Opportunity/fields/Form_opened__c.field-meta.xml
<CustomField>
    <fullName>Form_opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form opened</label>
    <type>Checkbox</type>
</CustomField>