force-app/main/default/objects/Opportunity/fields/formula_one__c.field-meta.xml
<CustomField>
    <fullName>formula_one__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula one</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>