force-app/main/default/objects/Opportunity/fields/FSP_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>FSP_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSP Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>