force-app/main/default/objects/Opportunity/fields/Full_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Full_Call_Notes__c</fullName>
    <description>Longer version of the Open Call Notes field</description>
    <inlineHelpText>New Sales log a call to allow 30,000 characters, and detect record types of core-new business, post host, extended sales and display active stage picklists. Also removed business objectives.</inlineHelpText>
    <label>Call Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>