force-app/main/default/objects/Opportunity/fields/Full_Ink__c.field-meta.xml
<CustomField>
    <fullName>Full_Ink__c</fullName>
    <description>Scheduling Link from Contact</description>
    <formula>Contact__r.Full_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Ink</label>
    <type>Text</type>
</CustomField>