force-app/main/default/objects/Opportunity/fields/Future_Years_Winner__c.field-meta.xml
<CustomField>
    <fullName>Future_Years_Winner__c</fullName>
    <label>Future Years Winner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>