force-app/main/default/objects/Opportunity/fields/Future_Years_Won__c.field-meta.xml
<CustomField>
    <fullName>Future_Years_Won__c</fullName>
    <label>Future Years Won</label>
    <length>250</length>
    <type>Text</type>
</CustomField>