force-app/main/default/objects/Opportunity/fields/Generate_Referrals_New_Client_Present__c.field-meta.xml
<CustomField>
    <fullName>Generate_Referrals_New_Client_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Referrals/New Client Present.</label>
    <type>Checkbox</type>
</CustomField>