force-app/main/default/objects/Opportunity/fields/Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Goal_Amount__c</fullName>
    <description>This is the amount that is predicted could be sold to this target, based on past results in this market.</description>
    <inlineHelpText>This is the amount that is predicted could be sold to this target, based on past results in this market.</inlineHelpText>
    <label>Goal Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>