force-app/main/default/objects/Opportunity/fields/Goal_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Goal_Reassigned__c</fullName>
    <description>Percent of goal that is being reassigned to the new Account Manager</description>
    <inlineHelpText>Percent of goal that is being reassigned to the new Account Manager</inlineHelpText>
    <label>Goal % Reassigned</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>