force-app/main/default/objects/Opportunity/fields/Group_Association__c.field-meta.xml
<CustomField>
    <fullName>Group_Association__c</fullName>
    <formula>Market_Project__r.Group_Association__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Association</label>
    <type>Text</type>
</CustomField>