force-app/main/default/objects/Opportunity/fields/Has_been_called__c.field-meta.xml
<CustomField>
    <fullName>Has_been_called__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been called</label>
    <type>Checkbox</type>
</CustomField>