force-app/main/default/objects/Opportunity/fields/HighValuePurchaserForbes__c.field-meta.xml
<CustomField>
    <fullName>HighValuePurchaserForbes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Value Purchaser (Forbes)</label>
    <type>Checkbox</type>
</CustomField>