force-app/main/default/objects/Opportunity/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>How important does the target feel this product/service is to their business? 1-10</description>
    <inlineHelpText>How important does the target feel this product/service is to their business? 1-10</inlineHelpText>
    <label>Importance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>