force-app/main/default/objects/Opportunity/fields/Increased_Transaction_Value_Goal__c.field-meta.xml
<CustomField>
    <fullName>Increased_Transaction_Value_Goal__c</fullName>
    <label>Increased Transaction $ Value Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>