force-app/main/default/objects/Opportunity/fields/Info_Session_RSVP__c.field-meta.xml
<CustomField>
    <fullName>Info_Session_RSVP__c</fullName>
    <description>Type the number of the Info Session that this candidate would like to attend, as listed in the &quot;Info Sessions Available&quot; field.</description>
    <inlineHelpText>Type the number of the Info Session that this candidate would like to attend, as listed in the &quot;Info Sessions Available&quot; field.</inlineHelpText>
    <label>Info Session RSVP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>