force-app/main/default/objects/Opportunity/fields/Info_Sessions_Available__c.field-meta.xml
<CustomField>
    <fullName>Info_Sessions_Available__c</fullName>
    <formula>Market_Project__r.Info_Sessions_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Info Sessions Available</label>
    <type>Text</type>
</CustomField>