force-app/main/default/objects/Opportunity/fields/Interested_in_EH_Back_Cover__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_EH_Back_Cover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If your client was showing interest in a Back Cover appearance but could not commit, please check this box as they may purchase in another publication month.</description>
    <label>Interested in EH Back Cover</label>
    <type>Checkbox</type>
</CustomField>