force-app/main/default/objects/Opportunity/fields/IP_Specialty__c.field-meta.xml
<CustomField>
    <fullName>IP_Specialty__c</fullName>
    <formula>TEXT(Contact__r.IP_Specialty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Specialty</label>
    <type>Text</type>
</CustomField>