force-app/main/default/objects/Opportunity/fields/Is_First_Appointment_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Appointment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Appointment Created</label>
    <type>Checkbox</type>
</CustomField>