force-app/main/default/objects/Opportunity/fields/Is_Sync_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sync Needed</label>
    <type>Checkbox</type>
</CustomField>