force-app/main/default/objects/Opportunity/fields/kugo2p__Frequency__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Frequency__c</fullName>
    <inlineHelpText>Recurring payments frequency</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>