force-app/main/default/objects/Opportunity/fields/kugo2p__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Invoice_Number__c</fullName>
    <label>Deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>