force-app/main/default/objects/Opportunity/fields/kugo2p__Number_of_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Number_of_Payments_Made__c</fullName>
    <inlineHelpText>Total number of settled or completed payments related to this opportunity. Updated automatically when a payment record is added, updated or removed.</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>