force-app/main/default/objects/Opportunity/fields/kugo2p__Paid_Off__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Paid_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when payments equal or exceed the opportunity amount (if &gt;0).</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>