force-app/main/default/objects/Opportunity/fields/kugo2p__Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Payments_Made__c</fullName>
    <inlineHelpText>Total of settled payments related to this opportunity. This field is updated automatically when a payment record is added, updated or removed.</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>