force-app/main/default/objects/Opportunity/fields/kugo2p__Period__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Period__c</fullName>
    <inlineHelpText>Recurring payments period.</inlineHelpText>
    <label>Deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>SemiMonth</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>