force-app/main/default/objects/Opportunity/fields/kugo2p__PrimaryOrder__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__PrimaryOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Order assigned to the Opportunity. Only one related Order can be designated as Primary.</description>
    <inlineHelpText>Primary Order assigned to the Opportunity. Only one related Order can be designated as Primary</inlineHelpText>
    <label>Primary Order</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>