force-app/main/default/objects/Opportunity/fields/kugo2p__PrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__PrimaryQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Quote assigned to the Opportunity. Only one related Quote can be designated as Primary.</description>
    <inlineHelpText>Primary Quote assigned to the Opportunity. Only one related Quote can be designated as Primary</inlineHelpText>
    <label>Primary Quote</label>
    <referenceTo>kugo2p__SalesQuote__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>