force-app/main/default/objects/Opportunity/fields/kugo2p__Shipping__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Shipping__c</fullName>
    <inlineHelpText>Shipping Amount</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>