force-app/main/default/objects/Opportunity/fields/kugo2p__SyncSource__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__SyncSource__c</fullName>
    <description>Source Record of Opportunity Amount or Opportunity Product Line Sync. Value is set automatically per Kugamon Settings.

Requires Kugamon Settings &apos;Sync Primary Quote to Opportunity&apos; and/or &apos;Sync Primary Order to Opportunity&apos; functions to be  enabled.</description>
    <inlineHelpText>Source Record of Opportunity Amount or Opportunity Product Line Sync. Value is set automatically per Kugamon Settings</inlineHelpText>
    <label>Sync Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Quote</fullName>
            </value>
            <value>
                <fullName>Primary Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>