force-app/main/default/objects/Opportunity/fields/kugo2p__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>kugo2p__Total_Amount__c</fullName>
    <formula>Amount +  kugo2p__Shipping__c +  kugo2p__Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total calculated amount (Opportunity amount + shipping + tax)</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>