force-app/main/default/objects/Opportunity/fields/Last_call_comments__c.field-meta.xml
<CustomField>
    <fullName>Last_call_comments__c</fullName>
    <label>Last call comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>