force-app/main/default/objects/Opportunity/fields/Last_Call_Comments_Notes_del__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Comments_Notes_del__c</fullName>
    <label>Last Call Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>