force-app/main/default/objects/Opportunity/fields/Last_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Notes__c</fullName>
    <label>Last Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>