force-app/main/default/objects/Opportunity/fields/Last_Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Result__c</fullName>
    <label>Last Call Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>