force-app/main/default/objects/Opportunity/fields/Last_Campaign_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Activity__c</fullName>
    <formula>Contact__r.Last_Campaign_Activity__c</formula>
    <label>Last Campaign Activity</label>
    <type>Date</type>
</CustomField>