force-app/main/default/objects/Opportunity/fields/Last_Year_Spent__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Spent__c</fullName>
    <label>Last Year $ Spent</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>