force-app/main/default/objects/Opportunity/fields/Late_Addition__c.field-meta.xml
<CustomField>
    <fullName>Late_Addition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Addition</label>
    <type>Checkbox</type>
</CustomField>