force-app/main/default/objects/Opportunity/fields/Launch_Market__c.field-meta.xml
<CustomField>
    <fullName>Launch_Market__c</fullName>
    <formula>Market_Project__r.Launch_Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch Market</label>
    <type>Checkbox</type>
</CustomField>