force-app/main/default/objects/Opportunity/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <formula>Contact__r.License__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License</label>
    <type>Text</type>
</CustomField>