force-app/main/default/objects/Opportunity/fields/Logged_Calls__c.field-meta.xml
<CustomField>
    <fullName>Logged_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Updated by log a call flow</description>
    <label>LOG</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>