force-app/main/default/objects/Opportunity/fields/Login_Code__c.field-meta.xml
<CustomField>
    <fullName>Login_Code__c</fullName>
    <formula>Contact__r.Login_Code__c</formula>
    <label>Login Code</label>
    <type>Text</type>
</CustomField>