force-app/main/default/objects/Opportunity/fields/LY_Purchase__c.field-meta.xml
<CustomField>
    <fullName>LY_Purchase__c</fullName>
    <label>LY Purchase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>