force-app/main/default/objects/Opportunity/fields/LY_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>LY_Purchase_Amount__c</fullName>
    <label>LY Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>