force-app/main/default/objects/Opportunity/fields/Magazine_Website__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Website__c</fullName>
    <formula>Market_Project__r.Magazine_Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magazine Website</label>
    <type>Text</type>
</CustomField>