force-app/main/default/objects/Opportunity/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Contact_Mailing_Street__c  &amp; &quot;, &quot; &amp;  Contact_Mailing_City__c  &amp; &quot;, &quot; &amp; Contact_Mailing_State__c &amp; &quot;, &quot; &amp;  Contact_Mailing_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>