force-app/main/default/objects/Opportunity/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Mailing_Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>