force-app/main/default/objects/Opportunity/fields/Market_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Close_Date__c</fullName>
    <formula>Market_Project__r.Market_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Close Date</label>
    <type>Date</type>
</CustomField>