force-app/main/default/objects/Opportunity/fields/Market_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Market_Go_Live__c</fullName>
    <formula>Market_Project__r.Web_Listings_Go_Live__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Go Live</label>
    <type>Date</type>
</CustomField>