force-app/main/default/objects/Opportunity/fields/Market_Guidebook_No_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Guidebook_No_Price__c</fullName>
    <formula>Market_Project__r.Guidebook_No_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Guidebook No Price</label>
    <type>Text</type>
</CustomField>