force-app/main/default/objects/Opportunity/fields/Market_Guidebook_with_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Guidebook_with_Price__c</fullName>
    <formula>Market_Project__r.Guidebook__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Guidebook with Price</label>
    <type>Text</type>
</CustomField>