force-app/main/default/objects/Opportunity/fields/Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Name__c</fullName>
    <formula>Market_Project__r.Name</formula>
    <label>Market Name</label>
    <type>Text</type>
</CustomField>