force-app/main/default/objects/Opportunity/fields/Market_Project_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Market_Project_SF_ID__c</fullName>
    <formula>Market_Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Project SF ID</label>
    <type>Text</type>
</CustomField>