force-app/main/default/objects/Opportunity/fields/Market_Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Sales_Start_Date__c</fullName>
    <formula>Market_Project__r.Sales_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Sales Start Date</label>
    <type>Date</type>
</CustomField>