force-app/main/default/objects/Opportunity/fields/Market_Sales_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Sales_Stop_Date__c</fullName>
    <description>Shows the sales close date of an opportunitie&apos;s market project on the opportunity, used mostly for analytics</description>
    <formula>Market_Project__r.Sales_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Sales Stop Date</label>
    <type>Date</type>
</CustomField>