force-app/main/default/objects/Opportunity/fields/Market_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Start_Date__c</fullName>
    <formula>Market_Project__r.Market_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Start Date</label>
    <type>Date</type>
</CustomField>