force-app/main/default/objects/Opportunity/fields/Marketing_Tool_Interest__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tool_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Tool Interest</label>
    <type>Checkbox</type>
</CustomField>