force-app/main/default/objects/Opportunity/fields/Meetings_OffSite__c.field-meta.xml
<CustomField>
    <fullName>Meetings_OffSite__c</fullName>
    <label>Meetings - Off Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Frequency unknown</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>