force-app/main/default/objects/Opportunity/fields/Mobile_Formula__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Formula__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone</label>
    <type>Text</type>
</CustomField>