force-app/main/default/objects/Opportunity/fields/Never_Winner__c.field-meta.xml
<CustomField>
    <fullName>Never_Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, at the time of Opp creation, this client had never received the Five Star award.</inlineHelpText>
    <label>Never Winner</label>
    <type>Checkbox</type>
</CustomField>