force-app/main/default/objects/Opportunity/fields/New_AM__c.field-meta.xml
<CustomField>
    <fullName>New_AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Manager Receiving percent of the clients original goal at market launch</description>
    <inlineHelpText>Account Manager Receiving percent of the clients original goal at market launch</inlineHelpText>
    <label>New AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>