force-app/main/default/objects/Opportunity/fields/NEW_Research_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>NEW_Research_Form_URL__c</fullName>
    <formula>Market_Project__r.Form_URL__c &amp; &quot;?OID=&quot; &amp;  SF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NEW Research Form URL</label>
    <type>Text</type>
</CustomField>