force-app/main/default/objects/Opportunity/fields/New_Winner_Fortune_Listing__c.field-meta.xml
<CustomField>
    <fullName>New_Winner_Fortune_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, the client will receive a free listing as a first time award winner (does not include Rising Star clients)</description>
    <label>New Winner Fortune Listing</label>
    <type>Checkbox</type>
</CustomField>