force-app/main/default/objects/Opportunity/fields/Next_4_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_4_Business_Days__c</fullName>
    <formula>CASE(MOD( TODAY() - DATE(1900, 1, 7), 7), 0, TODAY() +4, 1, TODAY() +4, 2, TODAY() +4,3, TODAY() +6, 4, TODAY() +6, 5, TODAY() +6, 6, TODAY() +4,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next 4 Business Days</label>
    <type>Date</type>
</CustomField>