force-app/main/default/objects/Opportunity/fields/Next_call_date__c.field-meta.xml
<CustomField>
    <fullName>Next_call_date__c</fullName>
    <label>Next call date</label>
    <type>Date</type>
</CustomField>