force-app/main/default/objects/Opportunity/fields/Next_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date_Time__c</fullName>
    <label>Next Call Date/Time</label>
    <type>DateTime</type>
</CustomField>