force-app/main/default/objects/Opportunity/fields/Next_call_goal__c.field-meta.xml
<CustomField>
    <fullName>Next_call_goal__c</fullName>
    <label>Next call goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VM1</fullName>
            </value>
            <value>
                <fullName>VM2</fullName>
            </value>
            <value>
                <fullName>Schedule Discovery Appt.</fullName>
            </value>
            <value>
                <fullName>Present Award Guide</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>