force-app/main/default/objects/Opportunity/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <formula>Contact__r.Nickname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nickname</label>
    <type>Text</type>
</CustomField>