force-app/main/default/objects/Opportunity/fields/No_Interest_Detail__c.field-meta.xml
<CustomField>
    <fullName>No_Interest_Detail__c</fullName>
    <label>No Interest Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>