force-app/main/default/objects/Opportunity/fields/No_Interest_Details__c.field-meta.xml
<CustomField>
    <fullName>No_Interest_Details__c</fullName>
    <label>No Interest Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>